--- a/SpringBoot/CrudPractice/src/main/resources/application.yml
+++ b/SpringBoot/CrudPractice/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/crud?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
-    password: Todaerika3!
+    password: ssafy
+#    password: Todaerika3!
     driver-class-name: com.mysql.cj.jdbc.Driver
   thymeleaf:
     cache: false
@@ -18,4 +19,5 @@ spring:
     open-in-view: false
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+#      ddl-auto: create
